--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
   ],
   "dependencies": {
     "foundation": "~5.2.2",
-    "angular": "~1.2.16"
+    "angular": "~1.2.16",
+    "angular-route": "~1.2.16",
+    "angular-resource": "~1.2.16"
   }
 }
