--- a/src/devplex.GitServer.Web/devplex.GitServer.Web.csproj
+++ b/src/devplex.GitServer.Web/devplex.GitServer.Web.csproj
@@ -121,6 +121,7 @@
     <Content Include="Content\Styles\main.css" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\devplex.GitServer.js" />
+    <Content Include="Templates\home.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -128,6 +129,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\OrganizationController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -138,11 +140,13 @@
     <Content Include="packages.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Scripts\devplex.GitServer.app.coffee" />
+    <Content Include="Scripts\app.coffee" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Scripts\devplex.GitServer.js.map" />
     <Content Include="Views\Shared\_TopBar.cshtml" />
     <Content Include="Content\Styles\_top-bar.scss" />
+    <Content Include="Scripts\controllers\home.coffee" />
+    <Content Include="Scripts\devplex.GitServer.js.map" />
+    <Content Include="Scripts\resources\organization.coffee" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
